Improved MiniMessage support and updated the locale